--- a/index.html
+++ b/index.html
@@ -5,12 +5,119 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CodeWar</title>
+
+    <!-- Custom CSS  -->
     <link rel="stylesheet" href="style.css">
+
+    <!-- Bootstrap CDN  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
+    <section class="pricing container-fluid">
+        <div class="row">
+            <div class="col">
+                <h2>
+                    Our Pricing
+                </h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo fugiat pariatur velit quisquam ex dignissimos adipisci soluta assumenda ea doloribus.</p>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <p>Basic</p>
+                        <h2>Free</h2>
+                        <p>512GB Ram</p>
+                        <p>80GB Disk</p>
+                        <p>2 User</p>
+                        <p>4TB Bandwidth</p>
+                        <button>GET PLAN</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <p>Basic</p>
+                        <h2>Free</h2>
+                        <p>512GB Ram</p>
+                        <p>80GB Disk</p>
+                        <p>2 User</p>
+                        <p>4TB Bandwidth</p>
+                        <button>GET PLAN</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="overview container-fluid text-center">
+        <h2>Take <span class="overview-span">quick overview</span></h2>
+        <h2>of this <span class="overview-span">App</span></h2>
+        <img src="images/icons/icons8-play-50.png" alt="">
+    </section>
+
+    <section class="ask-us container-fluid">
+        <div class="content">
+            <h2>Ask us anything and we will get back soon in a day</h2>
+            <input type="text" placeholder="Name"> <input type="email" placeholder="Email">
+            <br>
+            <textarea name="" placeholder="Message" id="" cols="55" rows="10"></textarea>
+            <br>
+            <button type="button">SEND MESSAGE</button>
+        </div>
+    </section>
+
+    <section class="contact-info container-fluid">
+        <div class="row">
+            <div class="col">
+                <img src="images/icons/icons8-location-50.png" alt="">
+                <h2>Office Address</h2>
+                <p>The PATH Toronto,</p>
+                <p>ON M5B 2H1, Canada</p>
+            </div>
+            <div class="col email">
+                <img src="images/icons/Frame 2.svg" alt="">
+                <h2>
+                    Email Us
+                </h2>
+                <p>hello@scoda.com</p>
+                <p>jobs@scoda.com</p>
+            </div>
+            <div class="col">
+                <img src="images/icons/icons8-phone-50.png" alt="">
+                <h2>Call Us</h2>
+                <p>(+1) 613 555-0105</p>
+                <p>(+1) 613 555-0105</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="subscribe container-fluid">
+        <div class="content">
+            <h2>Subscribe now and get lifetime premium access</h2>
+            <br>
+            <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ex iste accusantium voluptate eligendi sit maiores, aut vitae, sunt hic pariatur accusamus quasi earum a fugit maxime cumque neque fuga.</p>
+            <br>
+            <input type="email" placeholder="Your Email"><button class="btn btn-danger btn-lg" >SUBSCRIBE</button>
+        </div>
+    </section>
+
+    <footer class="container-fluid">
+        <img src="images/icons/icons8-facebook-50.png" alt="">
+       <img src="images/icons/icons8-dribbble-50.png" alt="">
+       <img src="images/icons/icons8-behance-50.png" alt="">
+       <img src="images/icons/icons8-instagram-50.png" alt="">
+       <img src="images/icons/icons8-linkedin-50.png" alt="">
+    </footer>
 
     
-
+    <!-- Custom CSS -->
     <style src="script.js"></style>
+
+    <!-- Bootstrap CDN  -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 </html>
