--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,24 +14,60 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
+
 <body>
+
+    <section class="features container-fluid">
+        <h2 class="text-center">Awesome Features</h2>
+        <div class="row">
+            <div class="col" style="text-align: left;">
+                <h4>Retina Ready</h4>
+                <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat expedita quos in!
+                    Et sapiente ut voluptatem! Quis ducimus quos odit?</p>
+                <h4>Easy to use</h4>
+                <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat expedita quos in!
+                    Et sapiente ut voluptatem! Quis ducimus quos odit?</p>
+                <h4>Easy Import</h4>
+                <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat expedita quos in!
+                    Et sapiente ut voluptatem! Quis ducimus quos odit?</p>
+            </div>
+            <div class="col text-center">
+                <img src="images/feature.png" alt="">
+            </div>
+            <div class="col" style="text-align: right;">
+                <h4>Creative Elements</h4>
+                <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat expedita quos in!
+                    Et sapiente
+                    ut voluptatem! Quis ducimus quos odit?</p>
+                <h4>Bug Free</h4>
+                <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat expedita quos in!
+                    Et sapiente
+                    ut voluptatem! Quis ducimus quos odit?</p>
+                <h4>Fast Support</h4>
+                <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat expedita quos in!
+                    Et sapiente
+                    ut voluptatem! Quis ducimus quos odit?</p>
+            </div>
+        </div>
+    </section>
     <section class="pricing container-fluid">
         <div class="row">
             <div class="col">
                 <h2>
                     Our Pricing
                 </h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo fugiat pariatur velit quisquam ex dignissimos adipisci soluta assumenda ea doloribus.</p>
+                <p class="text-muted" style="text-align: left;">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Explicabo fugiat pariatur velit quisquam ex dignissimos adipisci soluta assumenda ea doloribus.</p>
             </div>
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <p>Basic</p>
+                        <h5>Basic</h5>
                         <h2>Free</h2>
-                        <p>512GB Ram</p>
-                        <p>80GB Disk</p>
-                        <p>2 User</p>
-                        <p>4TB Bandwidth</p>
+                        <p class="text-muted">512GB Ram</p>
+                        <p class="text-muted">80GB Disk</p>
+                        <p class="text-muted">2 User</p>
+                        <p class="text-muted">4TB Bandwidth</p>
                         <button>GET PLAN</button>
                     </div>
                 </div>
@@ -38,12 +75,12 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <p>Basic</p>
+                        <h5>Basic</h5>
                         <h2>Free</h2>
-                        <p>512GB Ram</p>
-                        <p>80GB Disk</p>
-                        <p>2 User</p>
-                        <p>4TB Bandwidth</p>
+                        <p class="text-muted">512GB Ram</p>
+                        <p class="text-muted">80GB Disk</p>
+                        <p class="text-muted">2 User</p>
+                        <p class="text-muted">4TB Bandwidth</p>
                         <button>GET PLAN</button>
                     </div>
                 </div>
@@ -97,21 +134,23 @@
         <div class="content">
             <h2>Subscribe now and get lifetime premium access</h2>
             <br>
-            <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ex iste accusantium voluptate eligendi sit maiores, aut vitae, sunt hic pariatur accusamus quasi earum a fugit maxime cumque neque fuga.</p>
+            <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ex iste accusantium
+                voluptate eligendi sit maiores, aut vitae, sunt hic pariatur accusamus quasi earum a fugit maxime cumque
+                neque fuga.</p>
             <br>
-            <input type="email" placeholder="Your Email"><button class="btn btn-danger btn-lg" >SUBSCRIBE</button>
+            <input type="email" placeholder="Your Email"><button class="btn btn-danger btn-lg">SUBSCRIBE</button>
         </div>
     </section>
 
     <footer class="container-fluid">
         <img src="images/icons/icons8-facebook-50.png" alt="">
-       <img src="images/icons/icons8-dribbble-50.png" alt="">
-       <img src="images/icons/icons8-behance-50.png" alt="">
-       <img src="images/icons/icons8-instagram-50.png" alt="">
-       <img src="images/icons/icons8-linkedin-50.png" alt="">
+        <img src="images/icons/icons8-dribbble-50.png" alt="">
+        <img src="images/icons/icons8-behance-50.png" alt="">
+        <img src="images/icons/icons8-instagram-50.png" alt="">
+        <img src="images/icons/icons8-linkedin-50.png" alt="">
     </footer>
 
-    
+
     <!-- Custom CSS -->
     <style src="script.js"></style>
 
@@ -120,4 +159,5 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
