hero figure almost done

--- a/index.html
+++ b/index.html
@@ -17,6 +17,28 @@
 
 <body>
 
+    <section class="hero-figure container-fluid">
+        <nav>
+            <h1>Scoda</h1>
+        </nav>
+
+
+        <div class="row">
+            <div class="col">
+                <div class="hero-text">
+                    <h1><span>Showcase </span>your</h1>
+                    <h1>App in <span>easy way</span></h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet sed voluptatem cum nisi quaerat laborum earum nobis at quam? Ratione.</p>
+                    <button>BUY TEMPLATE</button>
+
+                </div>
+            </div>
+            <div class="col text-center">
+                <img src="images/iPhone-01.ba1abb49.png" alt="" height="500px">
+            </div>
+        </div>
+    </section>
+
     <section class="features container-fluid">
         <h2 class="text-center">Awesome Features</h2>
         <div class="row">
